--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,24 @@ body {
     position: absolute;
     z-index: -1;
 }
+
+.bottom-nav {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
+.bottom-nav a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    padding: 0 5px;
+}
+
+.bottom-nav a:hover {
+    color: #d2d2d2;
+}
