--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
+
 * {
     box-sizing: border-box;
+    cursor: none;
 }
 
 body {
@@ -7,6 +10,8 @@ body {
     padding: 0;
     overflow-x: hidden;
     overflow-y: hidden;
+    background-color: #473939;
+    font-family: 'Merriweather';
 }
 
 .app-container {
@@ -14,6 +19,7 @@ body {
     height: 100vh;
     position: absolute;
     z-index: -1;
+    transition: 1s ease;
 }
 
 .bottom-nav {
@@ -31,8 +37,35 @@ body {
     color: white;
     font-size: 14px;
     padding: 0 5px;
+    letter-spacing: 3px;
 }
 
 .bottom-nav a:hover {
     color: #d2d2d2;
+    transition: 0.4s;
+}
+
+.wrapper {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.play-button {
+    width: 190px;
+    height: 80px;
+    border: 5px solid #f1f1f1;
+    color: #f1f1f1;
+    margin: auto;
+    font-size: 45px;
+    letter-spacing: 10px;
+    line-height: 70px;
+    text-align: center;
+    transition: 1.5s ease;
+}
+
+.play-button:hover {
+    background-color: white;
+    color: #333;
 }
